--- a/PokerPlanning/PokerPlanning.Web/ClientApp/src/index.html
+++ b/PokerPlanning/PokerPlanning.Web/ClientApp/src/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>PokerPlanning.Web</title>
-    <base href="/" />
+<head>
+  <meta charset="utf-8"/>
+  <title>PokerPlanning</title>
+  <base href="/"/>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <app-root>Loading...</app-root>
-  </body>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+</head>
+<body>
+<app-root>
+  <div class="container-fluid">
+    <div class="center-block">
+      <div class="row">
+        <div class="mx-auto w-auto p-3">
+          <div class="spinner-border text-primary" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</app-root>
+</body>
 </html>
